# simple-mcp-rag

./: .env.template  README.md  client.py  docker-compose.yml  pyproject.toml
lib/: util.py
server/: main.py
server/mcp/: search.py
