[project]
name = "simple-mcp-rag"
version = "0.1.0"
description = "これはGeminiのFunction Callingを使って、MCPサーバーをStreamable HTTP経由で呼び出す、Pythonで書かれたシンプルなRAGアプリケーションです。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch==7.16.2",
    "fastapi>=0.115.12",
    "google-genai>=1.15.0",
    "mcp[cli]>=1.9.0",
]
